Full Working Nav + Start on Intro Section

--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S1ant | Website</title>
     <script src="https://kit.fontawesome.com/be7ab801b5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
+
+    <div id="header">
+        <div class="logo">
+            <h1>S1ant</h1>
+        </div>
+        <ul class="nav-list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <div class="nav-icon">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </div>
+
+    <div id="intro">
+        <h1>Minecraft Plugin & Web Developer</h1>
+        <h2>I make minecraft plugins and websites!</h2>
+        <img src="icon.png" alt="icon">
+        <p>Look around</p>
+        <div class></div>
+    </div>
+
+    <!--
     <header>
         <h1 class="left-title">S1ant</h1>
         <div class="navbar" id="navbar">
@@ -23,26 +52,26 @@
     <div id="mobileitems">
         <a href="#">Home</a><br>
         <a href="https://discord.s1ant.club/">Discord</a><br>
-        <a href="https://panel.s1ant.club/">Panel</a><br>
         <a href="mailto:s1antbusiness@gmail.com">Mail</a>
     </div>
+
     
     <div class="intro">
         <h1>Hello!😀</h1>
-        <p>Lorem ipsum dolor sit amet, 
-            consectetur adipiscing elit. 
-            Phasellus quam nibh, pellentesque eget urna eget, 
-            blandit vehicula nisi. Nunc tortor lectus, 
-            scelerisque sed iaculis et, pretium vel leo. 
-            Aliquam rhoncus facilisis nunc, 
-            a fermentum neque vehicula non. 
-            Fusce blandit sed orci ac ultrices. 
-            Suspendisse id ultrices tortor. 
-            Aliquam blandit erat nec quam placerat, 
-            vehicula eleifend elit mollis. 
-            Suspendisse efficitur iaculis orci, 
-            sit amet vehicula ipsum dictum et. 
-            Sed vehicula volutpat metus, sit amet laoreet 
+        <p>Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit.
+            Phasellus quam nibh, pellentesque eget urna eget,
+            blandit vehicula nisi. Nunc tortor lectus,
+            scelerisque sed iaculis et, pretium vel leo.
+            Aliquam rhoncus facilisis nunc,
+            a fermentum neque vehicula non.
+            Fusce blandit sed orci ac ultrices.
+            Suspendisse id ultrices tortor.
+            Aliquam blandit erat nec quam placerat,
+            vehicula eleifend elit mollis.
+            Suspendisse efficitur iaculis orci,
+            sit amet vehicula ipsum dictum et.
+            Sed vehicula volutpat metus, sit amet laoreet
             magna semper et.</p>
     </div>
 
@@ -65,6 +94,8 @@
         <i class="fab fa-discord"></i>
         h
     </footer>
+    -->
     <script src="./script.js"></script>
 </body>
+
 </html>
