--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
     <div id="header">
         <div class="logo">
             <h1>S1ant</h1>
@@ -27,15 +26,15 @@
             <div class="line3"></div>
         </div>
     </div>
-
     <div id="intro">
-        <h1>Minecraft Plugin & Web Developer</h1>
-        <h2>I make minecraft plugins and websites!</h2>
-        <img src="icon.png" alt="icon">
-        <p>Look around</p>
-        <div class></div>
+        <div class="heading">
+            <h1>Minecraft Plugin & Web Developer</h1>
+            <h2>I make minecraft plugins and websites!</h2>
+        </div>
+        <div class="scroll">
+            <i class="fa fa-arrow-down icon"></i>
+        </div>
     </div>
-
     <!--
     <header>
         <h1 class="left-title">S1ant</h1>
