working portfolio w/ work :D

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul class="nav-list">
             <li><a href="#">Home</a></li>
             <li><a href="#work">Work</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="https://discord.s1ant.club/">Discord</a></li>
         </ul>
         <div class="nav-icon">
             <div class="line1"></div>
@@ -35,6 +35,102 @@
             <i class="fa fa-arrow-down icon"></i>
         </div>
     </div>
+    <div id="work">
+        <div class="main-title">
+            <h1>My Work</h1>
+            <div class="line"></div>
+        </div>
+        <div class="product-container">
+            <div class="products">
+                <div class="product">
+                    <img src="./product-imgs/p1.jpg" alt="">
+                    <div class="text-box">
+                        <h1>This is thing</h1>
+                        <a href="http://github.com/realS1ant">More</a>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="./product-imgs/p2.png" alt="">
+                    <div class="text-box">
+                        <h1>This is thing</h1>
+                        <a href="http://github.com/realS1ant">More</a>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="./product-imgs/p1.jpg" alt="">
+                    <div class="text-box">
+                        <h1>This is thing</h1>
+                        <a href="http://github.com/realS1ant">More</a>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="./product-imgs/p2.png" alt="">
+                    <div class="text-box">
+                        <h1>This is thing</h1>
+                        <a href="http://github.com/realS1ant">More</a>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="./product-imgs/p1.jpg" alt="">
+                    <div class="text-box">
+                        <h1>This is thing</h1>
+                        <a href="http://github.com/realS1ant">More</a>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="./product-imgs/p2.png" alt="">
+                    <div class="text-box">
+                        <h1>This is thing</h1>
+                        <a href="http://github.com/realS1ant">More</a>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="./product-imgs/p1.jpg" alt="">
+                    <div class="text-box">
+                        <h1>This is thing</h1>
+                        <a href="http://github.com/realS1ant">More</a>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="./product-imgs/p2.png" alt="">
+                    <div class="text-box">
+                        <h1>This is thing</h1>
+                        <a href="http://github.com/realS1ant">More</a>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="./product-imgs/p1.jpg" alt="">
+                    <div class="text-box">
+                        <h1>This is thing</h1>
+                        <a href="http://github.com/realS1ant">More</a>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="./product-imgs/p2.png" alt="">
+                    <div class="text-box">
+                        <h1>This is thing</h1>
+                        <a href="http://github.com/realS1ant">More</a>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="./product-imgs/p1.jpg" alt="">
+                    <div class="text-box">
+                        <h1>This is thing</h1>
+                        <a href="http://github.com/realS1ant">More</a>
+                    </div>
+                </div>
+                <div class="product">
+                    <img src="./product-imgs/p2.png" alt="">
+                    <div class="text-box">
+                        <h1>This is thing</h1>
+                        <a href="http://github.com/realS1ant">More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!--
     <header>
         <h1 class="left-title">S1ant</h1>
