--- a/index.html
+++ b/index.html
@@ -130,66 +130,8 @@
         </div>
     </div>
 
-
-    <!--
-    <header>
-        <h1 class="left-title">S1ant</h1>
-        <div class="navbar" id="navbar">
-            <a href="#" class="icon" onclick="navClick()">
-                <i class="fa fa-bars"></i>
-            </a>
-            <a href="#">Home</a>
-            <a href="https://discord.s1ant.club/">Discord</a>
-            <a href="https://panel.s1ant.club/">Panel</a>
-            <a href="mailto:s1antbusiness@gmail.com">Mail</a>
-        </div>
-    </header>
-    <div id="mobileitems">
-        <a href="#">Home</a><br>
-        <a href="https://discord.s1ant.club/">Discord</a><br>
-        <a href="mailto:s1antbusiness@gmail.com">Mail</a>
+    <div id="footer">
     </div>
-
-    
-    <div class="intro">
-        <h1>Hello!😀</h1>
-        <p>Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit.
-            Phasellus quam nibh, pellentesque eget urna eget,
-            blandit vehicula nisi. Nunc tortor lectus,
-            scelerisque sed iaculis et, pretium vel leo.
-            Aliquam rhoncus facilisis nunc,
-            a fermentum neque vehicula non.
-            Fusce blandit sed orci ac ultrices.
-            Suspendisse id ultrices tortor.
-            Aliquam blandit erat nec quam placerat,
-            vehicula eleifend elit mollis.
-            Suspendisse efficitur iaculis orci,
-            sit amet vehicula ipsum dictum et.
-            Sed vehicula volutpat metus, sit amet laoreet
-            magna semper et.</p>
-    </div>
-
-    <div class="products">
-
-        <div class="product">
-            <h1>Plugin One</h1>
-            <p>$1.00</p>
-            <div class="features">
-                <p>One</p>
-                <p>Two</p>
-                <p>Three</p>
-                <p>Four</p>
-            </div>
-        </div>
-
-    </div>
-
-    <footer>
-        <i class="fab fa-discord"></i>
-        h
-    </footer>
-    -->
     <script src="./script.js"></script>
 </body>
 
