:tada: Stable Release :)

--- a/index.html
+++ b/index.html
@@ -37,100 +37,48 @@
     </div>
     <div id="work">
         <div class="main-title">
-            <h1>My Work</h1>
+            <h1>My Most Recent Work</h1>
             <div class="line"></div>
         </div>
         <div class="product-container">
             <div class="products">
                 <div class="product">
-                    <img src="./product-imgs/p1.jpg" alt="">
+                    <img src="./product-imgs/p1.png" alt="">
                     <div class="text-box">
-                        <h1>This is thing</h1>
-                        <a href="http://github.com/realS1ant">More</a>
+                        <h1>MysticLink</h1>
+                        <a href="http://github.com/realS1ant/MysticLink">Repo</a>
                     </div>
                 </div>
                 <div class="product">
                     <img src="./product-imgs/p2.png" alt="">
                     <div class="text-box">
-                        <h1>This is thing</h1>
-                        <a href="http://github.com/realS1ant">More</a>
+                        <h1 style="font-size: 20px;">Permissions Plugin</h1>
+                        <a href="http://github.com/realS1ant/PermissionsPlugin">Repo</a>
                     </div>
                 </div>
                 <div class="product">
-                    <img src="./product-imgs/p1.jpg" alt="">
+                    <img src="./product-imgs/p3.png" alt="">
                     <div class="text-box">
-                        <h1>This is thing</h1>
-                        <a href="http://github.com/realS1ant">More</a>
+                        <h1 style="font-size: 20px;">Events Plugin (PAPI)</h1>
+                        <a href="http://github.com/realS1ant/EventsPlugin">Repo</a>
                     </div>
                 </div>
-                <div class="product">
-                    <img src="./product-imgs/p2.png" alt="">
-                    <div class="text-box">
-                        <h1>This is thing</h1>
-                        <a href="http://github.com/realS1ant">More</a>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="./product-imgs/p1.jpg" alt="">
-                    <div class="text-box">
-                        <h1>This is thing</h1>
-                        <a href="http://github.com/realS1ant">More</a>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="./product-imgs/p2.png" alt="">
-                    <div class="text-box">
-                        <h1>This is thing</h1>
-                        <a href="http://github.com/realS1ant">More</a>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="./product-imgs/p1.jpg" alt="">
-                    <div class="text-box">
-                        <h1>This is thing</h1>
-                        <a href="http://github.com/realS1ant">More</a>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="./product-imgs/p2.png" alt="">
-                    <div class="text-box">
-                        <h1>This is thing</h1>
-                        <a href="http://github.com/realS1ant">More</a>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="./product-imgs/p1.jpg" alt="">
-                    <div class="text-box">
-                        <h1>This is thing</h1>
-                        <a href="http://github.com/realS1ant">More</a>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="./product-imgs/p2.png" alt="">
-                    <div class="text-box">
-                        <h1>This is thing</h1>
-                        <a href="http://github.com/realS1ant">More</a>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="./product-imgs/p1.jpg" alt="">
-                    <div class="text-box">
-                        <h1>This is thing</h1>
-                        <a href="http://github.com/realS1ant">More</a>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="./product-imgs/p2.png" alt="">
-                    <div class="text-box">
-                        <h1>This is thing</h1>
-                        <a href="http://github.com/realS1ant">More</a>
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
 
     <div id="footer">
+        <div id="footer-icons">
+            <a href="https://github.com/realS1ant"><i class="fab fa-github footer-icon"></i></a>
+            <a href="https://github.com/realS1ant"><i class="fa fa-faucet footer-icon"></i></a>
+            <a href="https://github.com/realS1ant"><i class="fab fa-discord footer-icon"></i></a>
+        </div>
+        <ul class="nav-list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="https://discord.s1ant.club/">Discord</a></li>
+        </ul>
     </div>
     <script src="./script.js"></script>
 </body>
