:tada: Stable Release :)

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <div id="footer">
         <div id="footer-icons">
             <a href="https://github.com/realS1ant"><i class="fab fa-github footer-icon"></i></a>
-            <a href="https://github.com/realS1ant"><i class="fa fa-faucet footer-icon"></i></a>
-            <a href="https://github.com/realS1ant"><i class="fab fa-discord footer-icon"></i></a>
+            <a href="https://www.spigotmc.org/members/s1ant.182156/"><i class="fa fa-faucet footer-icon"></i></a>
+            <a href="https://discord.s1ant.club"><i class="fab fa-discord footer-icon"></i></a>
         </div>
         <ul class="nav-list">
             <li><a href="#">Home</a></li>
